CoreComponent info api.
