# backend/controllers/handler/SubscriptionDataHandlers.js
@@ -1,67 +1,7 @@
 'use strict';
 const logger = require('../../utils/logger');
-const http2 = require('http2');
-const errorHandler = require('./ErrorHandler')
+const requestManager = require('../utils/RequestManager')
 
-function makeARequest(clientAddress, method, requestPath, onSuccess) {
-    return new Promise((resolve, reject) => {
-        //Technical debdt: use dns or make nrf transport address an external parameter. TODO: fix
-        let client = http2.connect(clientAddress);
-        let nrfRequest = client.request({ ':method': method, ':path': requestPath });
-        nrfRequest.on('response', (responseHeaders) => {
-            let status = responseHeaders[':status']
-            if (status !== 200) {
-                reject(errorHandler.handleError(responseHeaders));
-                client.destroy();
-            } else {
-                let data = '';
-                nrfRequest.on('data', (chunk) => { data += chunk; });
-                nrfRequest.on('end', () => {
-                    resolve(onSuccess(JSON.parse(data)));
-                    client.destroy();
-                });
-            }
-        });
-    });
-}
-
-/**
- *
- * @param {string} component the core component of which URI is needed
- * @returns a promise resolved with the component URI in NRF or rejected with a generic error
- */
-module.exports.getCoreComponentInstanceURI = (component) => {
-    logger.info(`Obtaining ${component} instance exposed service`);
-    return makeARequest(process.env.NRF_URL,
-        'GET',
-        `/nnrf-nfm/v1/nf-instances?nf-type=${component}`,
-        data => data._links.items[0].href.split(/:[0-9]+/)[1])
-}
-
-/**
- *
- * @param {string} componentURI the core component URI in NRF
- * @returns a promise resolved with an array containing the service name and the info needed to use it (address and path) or rejected with a generic error
- */
-module.exports.getCoreComponentServicesInfo = (componentURI) => {
-    //Technical debdt: get first element of ipEndPoints and versions. TODO: validate correctness.
-    logger.info(`Obtaining ${componentURI} exposed service`);
-    return makeARequest(process.env.NRF_URL,
-        'GET',
-        `${componentURI}`,
-        data => {
-            let nfServices = data.nfServices
-            let response = {}
-            nfServices.forEach(nfService => {
-                let ipEndPoint = nfService.ipEndPoints[0]
-                response[nfService.serviceName] = {
-                    address: `${nfService.scheme}://${ipEndPoint.ipv4Address}:${ipEndPoint.port}`,
-                    partialPath: `/${nfService.serviceName}/${nfService.versions[0].apiVersionInUri}`
-                }
-            });
-            return response
-        });
-}
 
 module.exports.getUESubscriptionData = function(ueImsi, clientAddress, partialRequestPath) {
     /*
@@ -71,14 +11,14 @@ module.exports.getUESubscriptionData = function(ueImsi, clientAddress, partialRe
     //TODO: Refactoring
     logger.info(`Obtaining ${ueImsi} subscription data`);
     let homePLMNI = ueImsi.split("-")[1].substring(0, 6);
-    return makeARequest(clientAddress,
+    return requestManager.makeARequest(clientAddress,
         'GET',
         `${partialRequestPath}/subscription-data/${ueImsi}/${homePLMNI}/provisioned-data/am-data`,
         async amData => {
             let defaultSNssais = amData.nssai.defaultSingleNssais ? amData.nssai.defaultSingleNssais : []
             let sNssais = amData.nssai.singleNssais ? amData.nssai.singleNssais : []
             defaultSNssais = defaultSNssais.map(defaultSNssai => {
-                return makeARequest(clientAddress,
+                return requestManager.makeARequest(clientAddress,
                     'GET',
                     `${partialRequestPath}/subscription-data/${ueImsi}/${homePLMNI}/provisioned-data/sm-data?single-nssai=${encodeURIComponent(JSON.stringify(defaultSNssai))}`,
                     smDataDefaultSNssai => smDataDefaultSNssai.dnnConfigurations).then(dnnConfiguration => {
@@ -87,7 +27,7 @@ module.exports.getUESubscriptionData = function(ueImsi, clientAddress, partialRe
                 });
             });
             sNssais = sNssais.map(sNssai => {
-                return makeARequest(clientAddress,
+                return requestManager.makeARequest(clientAddress,
                     'GET',
                     `${partialRequestPath}/subscription-data/${ueImsi}/${homePLMNI}/provisioned-data/sm-data?single-nssai=${encodeURIComponent(JSON.stringify(sNssai))}`,
                     smDataSNssai => smDataSNssai.dnnConfigurations).then(dnnConfiguration => {
